<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/bg_gradient"
    tools:context="com.example.ext.exercise_tracker.LoginSettings">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_tv_connec_sett"
        android:id="@+id/tv_desc"
        android:textColor="#f26d21"
        android:textSize="25dp"
        android:width="300dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions"
        android:id="@+id/et_ip_setting"
        android:textColor="#FFFFFF"
        android:width="200dp"
        android:text="@string/a_et_tempIP"
        android:layout_below="@+id/tv_desc"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_btn_apply"
        android:id="@+id/btn_back"
        android:onClick="doLogin"
        android:background="#1496BB"
        android:textColor="#ffffff"

        android:layout_marginTop="35dp"
        android:layout_below="@+id/et_filename"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_tv_defFolder"
        android:id="@+id/tvDesc2"
        android:textColor="#f26d21"
        android:textSize="25dp"
        android:width="300dp"
        android:layout_below="@+id/et_ip_setting"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions"
        android:id="@+id/et_folder"
        android:textColor="#FFFFFF"
        android:width="200dp"
        android:text="@string/a_et_defFolder"
        android:layout_below="@+id/tvDesc2"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_tv_fileName"
        android:id="@+id/tvDesc3"
        android:textColor="#f26d21"
        android:textSize="25dp"
        android:width="300dp"
        android:layout_below="@+id/et_folder"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions"
        android:id="@+id/et_filename"
        android:textColor="#FFFFFF"
        android:width="200dp"
        android:text="@string/a_et_indexPHP"
        android:layout_below="@+id/tvDesc3"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_btn_back"
        android:id="@+id/btn_home"
        android:onClick="doHome"
        android:background="#1496BB"
        android:textColor="#ffffff"
        android:layout_alignTop="@+id/btn_back"
        android:layout_alignEnd="@+id/et_filename" />

</RelativeLayout>
