<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg_gradient"
    tools:context="com.example.ext.exercise_tracker.AdminMain">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_tv_username"
        android:id="@+id/tv_cUsername"
        android:width="200dp"
        android:height="25dp"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_cUsername"
        android:background="@drawable/white_blue_shape"
        android:textColor="@color/white"
        android:layout_below="@+id/tv_cUsername"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Password"
        android:id="@+id/tv_cPassword"
        android:width="200dp"
        android:height="25dp"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:layout_below="@+id/et_cUsername"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_cPassword"
        android:background="@drawable/white_blue_shape"
        android:textColor="@color/white"
        android:layout_below="@+id/tv_cPassword"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_fullname"
        android:id="@+id/tv_fn"
        android:width="200dp"
        android:height="25dp"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:layout_below="@+id/et_cPassword"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_cFullname"
        android:background="@drawable/white_blue_shape"
        android:textColor="@color/white"
        android:layout_below="@+id/tv_fn"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_btn_back"
        android:layout_marginTop="20dp"
        android:id="@+id/button6"
        android:onClick="doBack"
        android:background="#1496BB"
        android:textColor="#ffffff"
        android:layout_below="@+id/et_goal"
        android:layout_alignEnd="@+id/et_goal" />

    <TextView
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_tv_email"
        android:id="@+id/tv_email"
        android:width="200dp"
        android:height="25dp"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:layout_below="@+id/et_cFullname"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_email"
        android:background="@drawable/white_blue_shape"
        android:textColor="@color/white"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_email"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_tv_height"
        android:id="@+id/tv_height"
        android:width="200dp"
        android:height="25dp"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:layout_below="@+id/et_email"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_height"
        android:background="@drawable/white_blue_shape"
        android:textColor="@color/white"
        android:layout_below="@+id/tv_height"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_tv_weight"
        android:id="@+id/tv_weight"
        android:width="200dp"
        android:height="25dp"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:layout_below="@+id/et_height"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_weight"
        android:background="@drawable/white_blue_shape"
        android:textColor="@color/white"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_weight"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_tv_goal"
        android:height="25dp"
        android:id="@+id/tv_goal"
        android:width="200dp"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:layout_below="@+id/et_weight"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_create"
        android:id="@+id/btn_create"
        android:onClick="doCreate"
        android:background="#1496BB"
        android:textColor="#ffffff"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/button6" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_goal"
        android:background="@drawable/white_blue_shape"
        android:textColor="@color/white"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_goal"
        android:layout_alignParentLeft="true" />

    <CheckBox

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cb_un"
        android:height="25dp"
        android:button="@drawable/chk_box_custom"
        android:visibility="invisible"
        android:layout_above="@+id/tv_cPassword"
        android:layout_toEndOf="@+id/tv_cUsername" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cb_psw"
        android:button="@drawable/chk_box_custom"
        android:visibility="invisible"
        android:layout_above="@+id/tv_fn"
        android:layout_toEndOf="@+id/tv_cPassword" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cb_fn"
        android:button="@drawable/chk_box_custom"
        android:visibility="invisible"
        android:layout_alignBottom="@+id/et_cFullname"
        android:layout_toEndOf="@+id/tv_fn" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cb_email"
        android:button="@drawable/chk_box_custom"
        android:visibility="invisible"
        android:layout_alignBottom="@+id/et_email"
        android:layout_alignStart="@+id/cb_height" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cb_height"
        android:button="@drawable/chk_box_custom"
        android:visibility="invisible"
        android:checked="false"
        android:layout_above="@+id/tv_weight"
        android:layout_toEndOf="@+id/tv_height" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cb_weight"
        android:button="@drawable/chk_box_custom"
        android:visibility="invisible"
        android:layout_above="@+id/tv_goal"
        android:layout_toEndOf="@+id/tv_weight" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cb_goal"
        android:button="@drawable/chk_box_custom"
        android:visibility="invisible"
        android:layout_above="@+id/button6"
        android:layout_alignStart="@+id/cb_height" />
</RelativeLayout>
